# rigid

./: Cargo.toml  README.md  rustfmt.toml
.github/: FUNDING.yml
src/: main.rs  term.rs
